--- a/res/anim/layout_list_slide_down_to_top.xml
+++ b/res/anim/layout_list_slide_down_to_top.xml
@@ -2,4 +2,4 @@
 <layoutAnimation xmlns:android="http://schemas.android.com/apk/res/android"
         android:delay="50%"
         android:animation="@anim/slide_right"
-        android:animationOrder="normal" />
+        android:animationOrder="reverse" />
