--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,7 +7,9 @@
     
     android:gestureStrokeType="multiple"
     android:eventsInterceptionEnabled="true"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gestureColor="#00000000"
+    android:uncertainGestureColor="#00000000">
 
 	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:layout_width="fill_parent"
